# ml-engg-cpp

./: .gitignore  README.md
client/: build.sh  run.sh
machine-learning/: run.sh
server/: CMakeLists.txt  Main.cc  clean_build.sh  config.toml  run.sh
server/inbound/: BaseRouter.cc  BaseRouter.h  EchoRoute.cc  EchoRoute.h  InfoRoute.cc  InfoRoute.h
server/model/: EchoRequest.h  EchoResponse.h  InfoResponse.h
server/service/: Circle.cc  Circle.h  EchoService.cc  EchoService.h  InfoService.cc  InfoService.h  Shape.h  Square.cc  Square.h
